@@ -2,7 +2,6 @@
 #include "cycletest.h"
 #include "amigascreen.h"
 #include "amigawindow.h"
-#include "cyclebutton.h"
 #include "debug.h"
 
 void CycleTest::startup() {
@@ -17,25 +16,55 @@ void CycleTest::startup() {
 	// Add window
 	AmigaWindow* window = new AmigaWindow(0, 13, 256, 179, "Test Window", Gadget::GADGET_DRAGGABLE, AmigaWindow::AMIGA_WINDOW_SHOW_CLOSE | AmigaWindow::AMIGA_WINDOW_SHOW_DEPTH);
 	screen->addGadget(window);
+	
+	// Add test buttons
+	_shelve = new Button(10, 70, 100, 20, "Shelve");
+	_unshelve = new Button(10, 90, 100, 20, "Unshelve");
+	_show = new Button(10, 110, 100, 20, "Show");
+	_hide = new Button(10, 130, 100, 20, "Hide");
+	_move = new Button(110, 70, 100, 20, "Move");
+	_resize = new Button(110, 90, 100, 20, "Resize");
+	_shelve->setRefcon(2);
+	_unshelve->setRefcon(3);
+	_show->setRefcon(4);
+	_hide->setRefcon(5);
+	_move->setRefcon(6);
+	_resize->setRefcon(7);
+	window->addGadget(_shelve);
+	window->addGadget(_unshelve);
+	window->addGadget(_show);
+	window->addGadget(_hide);
+	window->addGadget(_move);
+	window->addGadget(_resize);
+	_shelve->addGadgetEventHandler(this);
+	_unshelve->addGadgetEventHandler(this);
+	_show->addGadgetEventHandler(this);
+	_hide->addGadgetEventHandler(this);
+	_move->addGadgetEventHandler(this);
+	_resize->addGadgetEventHandler(this);
 
 	// Add cycle button
-	CycleButton* cyclebutton = new CycleButton(30, 30, 100, 20);
-	cyclebutton->addOption("Option 1", 1);
-	cyclebutton->addOption("Option 2", 2);
-	cyclebutton->addOption("Option 3", 3);
-	cyclebutton->addOption("Option 4", 4);
-	cyclebutton->addOption("Option 5", 5);
-	cyclebutton->addOption("Option 6", 6);
-	cyclebutton->addOption("Option 7", 7);
-	cyclebutton->addOption("Option 8", 8);
-	cyclebutton->addOption("Option 9", 9);
-	cyclebutton->addOption("Option 10", 10);
-	window->addGadget(cyclebutton);
+	_cycleButton = new CycleButton(30, 30, 100, 20);
+	_cycleButton->addOption("Option 1", 1);
+	_cycleButton->addOption("Option 2", 2);
+	_cycleButton->addOption("Option 3", 3);
+	_cycleButton->addOption("Option 4", 4);
+	_cycleButton->addOption("Option 5", 5);
+	_cycleButton->addOption("Option 6", 6);
+	_cycleButton->addOption("Option 7", 7);
+	_cycleButton->addOption("Option 8", 8);
+	_cycleButton->addOption("Option 9", 9);
+	_cycleButton->addOption("Option 10", 10);
+	window->addGadget(_cycleButton);
+	_cycleButton->addGadgetEventHandler(this);
+	_cycleButton->setDoubleClickable(true);
+	_cycleButton->setRefcon(1);
 
 	// Get preferred dimensions for cycle button and resize
+	Debug::printf("getPreferredDimensions()");
 	Gadget::Rect rect;
-	cyclebutton->getPreferredDimensions(rect);
-	cyclebutton->resize(rect.width, rect.height);
+	_cycleButton->getPreferredDimensions(rect);
+	_cycleButton->resize(rect.width, rect.height);
 	
 	// Ensure Woopsi can draw itself
 	enableDrawing();
@@ -48,4 +77,238 @@ void CycleTest::shutdown() {
 
 	// Call base shutdown method
 	Woopsi::shutdown();
+}
+
+void CycleTest::handleClickEvent(const GadgetEventArgs& e) {
+	switch (e.getSource()->getRefcon()) {
+		case 1:
+			Debug::printf("Clicked");
+			break;
+	}
+}
+
+void CycleTest::handleDragEvent(const GadgetEventArgs& e) {
+	switch (e.getSource()->getRefcon()) {
+		case 1:
+			Debug::printf("Dragged");
+			break;
+	}
+}
+
+void CycleTest::handleReleaseEvent(const GadgetEventArgs& e) {
+	switch (e.getSource()->getRefcon()) {
+		case 1:
+			Debug::printf("Released");
+			break;
+	}
+}
+
+void CycleTest::handleReleaseOutsideEvent(const GadgetEventArgs& e) {
+	switch (e.getSource()->getRefcon()) {
+		case 1:
+			Debug::printf("Released outside");
+			break;
+	}
+}
+
+void CycleTest::handleKeyPressEvent(const GadgetEventArgs& e) {
+	switch (e.getSource()->getRefcon()) {
+		case 1:
+			Debug::printf("Key pressed");
+			break;
+	}
+}
+
+void CycleTest::handleKeyReleaseEvent(const GadgetEventArgs& e) {
+	switch (e.getSource()->getRefcon()) {
+		case 1:
+			Debug::printf("Key released");
+			break;
+	}
+}
+
+void CycleTest::handleLidOpenEvent(const GadgetEventArgs& e) {
+	switch (e.getSource()->getRefcon()) {
+		case 1:
+			Debug::printf("Lid opened");
+			break;
+	}
+}
+
+void CycleTest::handleLidCloseEvent(const GadgetEventArgs& e) {
+	switch (e.getSource()->getRefcon()) {
+		case 1:
+			Debug::printf("Lid closed");
+			break;
+	}
+}
+
+void CycleTest::handleFocusEvent(const GadgetEventArgs& e) {
+	switch (e.getSource()->getRefcon()) {
+		case 1:
+			Debug::printf("Focused");
+			break;
+	}
+}
+
+void CycleTest::handleBlurEvent(const GadgetEventArgs& e) {
+	switch (e.getSource()->getRefcon()) {
+		case 1:
+			Debug::printf("Blurred");
+			break;
+	}
+}
+
+void CycleTest::handleCloseEvent(const GadgetEventArgs& e) {
+	switch (e.getSource()->getRefcon()) {
+		case 1:
+			Debug::printf("Closed");
+			break;
+	}
+}
+
+void CycleTest::handleHideEvent(const GadgetEventArgs& e) {
+	switch (e.getSource()->getRefcon()) {
+		case 1:
+			Debug::printf("Hidden");
+			break;
+	}
+}
+
+void CycleTest::handleShowEvent(const GadgetEventArgs& e) {
+	switch (e.getSource()->getRefcon()) {
+		case 1:
+			Debug::printf("Shown");
+			break;
+	}
+}
+
+void CycleTest::handleEnableEvent(const GadgetEventArgs& e) {
+	switch (e.getSource()->getRefcon()) {
+		case 1:
+			Debug::printf("Enabled");
+			break;
+	}
+}
+
+void CycleTest::handleDisableEvent(const GadgetEventArgs& e) {
+	switch (e.getSource()->getRefcon()) {
+		case 1:
+			Debug::printf("Disabled");
+			break;
+	}
+}
+
+void CycleTest::handleValueChangeEvent(const GadgetEventArgs& e) {
+	switch (e.getSource()->getRefcon()) {
+		case 1:
+			Debug::printf("Value changed");
+			break;
+	}
+}
+
+void CycleTest::handleResizeEvent(const GadgetEventArgs& e) {
+	switch (e.getSource()->getRefcon()) {
+		case 1:
+			Debug::printf("Resized");
+			break;
+	}
+}
+
+void CycleTest::handleMoveEvent(const GadgetEventArgs& e) {
+	switch (e.getSource()->getRefcon()) {
+		case 1:
+			Debug::printf("Moved");
+			break;
+	}
+}
+
+void CycleTest::handleScrollEvent(const GadgetEventArgs& e) {
+	switch (e.getSource()->getRefcon()) {
+		case 1:
+			Debug::printf("Scrolled");
+			break;
+	}
+}
+
+void CycleTest::handleShiftClickEvent(const GadgetEventArgs& e) {
+	switch (e.getSource()->getRefcon()) {
+		case 1:
+			Debug::printf("Shift clicked");
+			break;
+	}
+}
+
+void CycleTest::handleContextMenuSelectionEvent(const ContextMenuEventArgs& e) {
+	switch (e.getSource()->getRefcon()) {
+		case 1:
+			Debug::printf("Context menu selected");
+			break;
+	}
+}
+
+void CycleTest::handleDoubleClickEvent(const GadgetEventArgs& e) {
+	switch (e.getSource()->getRefcon()) {
+		case 1:
+			Debug::printf("Double clicked");
+			break;
+	}
+}
+
+void CycleTest::handleShelveEvent(const GadgetEventArgs& e) {
+	switch (e.getSource()->getRefcon()) {
+		case 1:
+			Debug::printf("Shelved");
+			break;
+	}
+}
+
+void CycleTest::handleUnshelveEvent(const GadgetEventArgs& e) {
+	switch (e.getSource()->getRefcon()) {
+		case 1:
+			Debug::printf("Unshelved");
+			break;
+	}
+}
+
+void CycleTest::handleActionEvent(const GadgetEventArgs& e) {
+	switch (e.getSource()->getRefcon()) {
+		case 1:
+			Debug::printf("Action");
+			break;
+		case 2:
+			_cycleButton->shelve();
+			break;
+		case 3:
+			_cycleButton->unshelve();
+			break;
+		case 4:
+			_cycleButton->show();
+			break;
+		case 5:
+			_cycleButton->hide();
+			break;
+		case 6:
+			_cycleButton->moveTo(10, 10);
+			break;
+		case 7:
+			_cycleButton->resize(10, 10);
+			break;
+	}
+}
+
+void CycleTest::handleMoveForwardEvent(const GadgetEventArgs& e) {
+	switch (e.getSource()->getRefcon()) {
+		case 1:
+			Debug::printf("Moved forwards");
+			break;
+	}
+}
+
+void CycleTest::handleMoveBackwardEvent(const GadgetEventArgs& e) {
+	switch (e.getSource()->getRefcon()) {
+		case 1:
+			Debug::printf("Moved backwards");
+			break;
+	}
 }
